tests/build/cases/widget/parent_not_widget.rs
use zero_ui::prelude_wgt::widget;

#[widget($crate::Foo)]
pub struct Foo(f32);

fn main() {}
